2010-11-04  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL parser: add support for ExtLib IO channels
	  Thanks Pietro Abate for the patch. (Closes: #299)
	* ALL add Cudf.mem_package (Closes: #307)
	* ALL Development release 0.5.99

2010-06-25  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL bug fix: do not enforce Keep on uninstalled packages
	  Thanks Ralf Treinen for the patch! (Closes: #266)
	* ALL bug fix: nicer error message for unknown packages found in
	  solution (Closes: #267)
	* ALL bug fix: avoid pretty printing some malformed vpkgformulae
	  (Closes: #272)
	* ALL bug fix: check for duplicate property in 822 stanzas
	  (Closes: #269)
	* ALL bug fix: comments no longer split stanzas in two
	  (Closes: #250)
	* ALL bug fix: perform string escape when pretty printing type
	  declarations (Closes: #271)
	* ALL add several test cases to the test suite
	* ALL Development release 0.5.98

2010-06-03  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* ALL bug fix: optional/mandatory extra property management
	* c-lib bug fix: add handling of vpkgformula extra properties
	* ALL bug fix: allow empty vpkglist as default values
	* ALL bug fix: do not accept trivial formulae as v(eq)pkglist
	* ALL Development release 0.5.97

2010-06-01  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* c-lib add structured accessors to request fields
	  (patch by Gustavo Gutierrez, thanks!)
	* doc better explain the role of load_solution
	* ALL simpler API for solutions: cudf_load_solution_from_file
	* ALL bug fix: avoid losing ?typedecl in convenience functions
	* c-lib add bindings for cudf_load_solution_from_file
	* backward-compatibility enabling compilation with OCaml 3.10.2
	* ALL bug fix: support heading '+' when parsing posint
	* ALL Development release 0.5.96

2009-12-18  Stefano Zacchiroli  <zack@pps.jussieu.fr>

	* c-lib Remove the need of OCaml devel stuff to use the C API
	* c-lib Provide bindings to OCaml native code, if available