@@ -1,3 +1,6 @@
+2011-11-05  Stefano Zacchiroli  <zack@pps.jussieu.fr>
+	* ALL cudf-check: faster (~ 2x) -dump
+
 2010-11-04  Stefano Zacchiroli  <zack@pps.jussieu.fr>
 
 	* ALL parser: add support for ExtLib IO channels
